apps/nitter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nitter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nitter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nitter
    spec:
      containers:
      - name: nitter
        image: zedeus/nitter:latest
        imagePullPolicy: Always
        command: [/src/nitter]
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /config
          readOnly: true
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        # resources:
        readinessProbe:
          httpGet:
            port: 8080
            path: /about
        livenessProbe:
          httpGet:
            port: 8080
            path: /about
          initialDelaySeconds: 15
      volumes:
      - name: config
        secret:
          secretName: nitter-config
      restartPolicy: Always
