apps/nitter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nitter
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: nitter
