apps/nitter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nitter
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - nitter.samcday.com
    secretName: nitter-tls
  rules:
  - host: nitter.samcday.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nitter
            port:
              number: 8080
